# fire-risk-wise-iot

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
Code/: AGENTS.md  README.md  pyproject.toml
Code/configs/: classes.yaml  dataset.yaml  mqtt_cloud.yaml  training.yaml
Code/data/: statistics.json
Code/scripts/: finetune_pipeline.py  mqtt_cloud_publisher.py  sdk_cloud_publisher.py
Code/src/: __init__.py  risk_engine.py  roi_config.py  utils.py  visualizer.py
Code/tests/: test_roi_config.py  test_visualizer.py
Datasource/: grafana_dashboard.json
configs/: classes.yaml  dataset.yaml  default.yaml  training.yaml
data/: detections.json  risk_timeline.json
diagrams/agent_decision_chain/: agent_decision_chain.drawio
diagrams/competition_timeline/: competition_timeline.drawio
diagrams/data_flow_pipeline/: data_flow_pipeline.drawio
diagrams/deepstream_pipeline/: deepstream_pipeline.drawio
diagrams/edge_cloud_architecture/: edge_cloud_architecture.drawio
diagrams/inference_pipeline/: inference_pipeline.drawio
diagrams/project_five_layer/: project_five_layer.drawio
diagrams/training_deploy_flow/: training_deploy_flow.drawio
diagrams/training_strategy/: training_strategy.drawio
diagrams/wise_iot_architecture/: wise_iot_architecture.drawio
documentation/: DESCRIPTION.md  GUIDANCE.md  ROADMAP.md
scripts/: finetune_pipeline.py  run_demo.py  train.py  vlm_autolabel.py  vlm_label.py
src/: detector.py  main.py  risk_engine.py
tests/: test_detector.py  test_risk_engine.py  test_utils.py
visualization/: fire_risk_detection_v1.json
(+18 files in other folders)
