[project]
name = "fire-risk-probe"
version = "0.1.0"
description = "Single-camera vision-based fire risk identification probe"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "paho-mqtt>=1.4.0",
    "wise-paas-datahub-edge-python-sdk>=1.1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
fire-risk = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
